--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
     "editor.formatOnSave": true,
-    "editor.formatOnPaste": true,
-    "editor.fontSize": 10
+    "editor.formatOnPaste": true
 }
